--- a/TaskManager.Web/Views/Shared/_Layout.cshtml
+++ b/TaskManager.Web/Views/Shared/_Layout.cshtml
@@ -139,7 +139,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">Trang chủ</a></li>
                         <li class="nav-item"><a class="nav-link" asp-controller="projects" asp-action="Index">Dự án</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-controller="progress" asp-action="Index">Tiến độ</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="reports" asp-action="Portfolio">Tiến độ</a></li>
                         <li class="nav-item"><a class="nav-link" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
                     </ul>
 
