--- a/TaskManager.Web/Views/Account/Register.cshtml
+++ b/TaskManager.Web/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
     <div class="col-md-8 col-lg-6">
         <div class="card register-card border-0 rounded-4">
             <div class="card-body p-4 bg-light">
-                <h2 class="text-title">🐾 Register</h2>
+                <h2 class="text-title">Register</h2>
                 <form asp-action="Register" method="post">
                     <div class="form-floating mb-3">
                         <input asp-for="Username" class="form-control" placeholder="Username" />
