--- a/TaskManager.Web/Views/Home/Landing.cshtml
+++ b/TaskManager.Web/Views/Home/Landing.cshtml
@@ -85,7 +85,7 @@ else
 
         <!-- Banner -->
         <div class="banner">
-            Tăng tốc công việc nhóm của bạn với AI tích hợp 🚀 — khả dụng cho tất cả gói Premium & Enterprise!
+            Tăng hiệu quả quản lsi công việc của bạn với task manager 
             <a href="#" class="ms-1">Tìm hiểu thêm</a>
         </div>
 
@@ -105,7 +105,7 @@ else
 
                     <!-- Image -->
                     <div class="col-lg-6 text-center">
-                        <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*4o2wMjmPgbPZmvtrO6L3vA.png"
+                        <img src="~/img/landing_img.png"
                              class="img-fluid" alt="App Screenshot">
                     </div>
                 </div>
